@@ -161,16 +161,6 @@ public abstract class ChannelNG<T extends SshContext> implements Channel {
 	public int getMaxiumRemotePacketSize() {
 		return remoteWindow.getMaximumPacketSize();
 	}
-	
-	/**
-	 * Indicates that the channel is EOF (it will not be receiving any more data
-	 * from the remote side).
-	 * 
-	 * @return boolean
-	 */
-	public boolean isEOF() {
-		return isRemoteEOF.get();
-	}
 
 	void init(ConnectionProtocol<T> connection) {
 		this.connection = connection;
@@ -1263,10 +1253,12 @@ public abstract class ChannelNG<T extends SshContext> implements Channel {
 		}
 	}
 
+	@Override
 	public boolean isLocalEOF() {
 		return isLocalEOF.get();
 	}
 	
+	@Override
 	public boolean isRemoteEOF() {
 		return isRemoteEOF.get();
 	}
